--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "compare-pdf",
-	"version": "1.1.8",
-	"description": "Standalone node module that compares pdfs",
+	"name": "compare-pdf-legito",
+	"version": "1.0.0",
+	"description": "Standalone node module that compares pdfs ( modified paths and sufixes)",
 	"main": "./functions/comparePdf",
 	"types": "./types/comparePdf.d.ts",
 	"scripts": {
